Otimização/Alteração/Adição de métodos e Organização saída terminal